--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -48,7 +48,10 @@ jobs:
       semVer: ${{ steps.gitversion.outputs.semVer }}
     steps:
       # gitversion/execute step omitted for brevity
-
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.7
+        with:
+            versionSpec: '5.5.0'
       - name: Determine Version
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
