--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -46,6 +46,7 @@ jobs:
   calculate-version:
     name: Calculate Version
     runs-on: ubuntu-latest
+    needs: build_and_test
     outputs:
       semVer: ${{ steps.gitversion.outputs.semVer }}
     steps:
@@ -66,7 +67,7 @@ jobs:
   display-semver:
     name: Display Semantic Version
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: calculate-version
     env:
       SEMVER: ${{ needs.calculate-version.outputs.semVer }}
     steps:
