--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,4 +1,4 @@
-mode: ContinuousDeployment
+mode: ContinuousDelivery
 next-version: 0.0.1
 major-version-bump-message: 'Breaking:'
 minor-version-bump-message: '(Update|New):'
