--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -19,7 +19,8 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macOS-latest, windows-latest]
+        operating-system: [ubuntu-latest]
+        #[ubuntu-latest, macOS-latest, windows-latest]
         java-version: [11]
     steps:
       - uses: actions/checkout@v2
