--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,20 +1,9 @@
 name: Build and Test
 
 on:
-  push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - main
-  # Run tests for any PRs.
   pull_request:
 
-env:
-  # TODO: Change variable to your image's name.
-  IMAGE_NAME: collection-api
-
 jobs:
-  # Run tests.
-  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
   build_and_test:
     runs-on: ${{ matrix.operating-system }}
     strategy:
@@ -25,8 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: joschi/setup-jdk@v2
         with:
-          java-version: ${{ matrix.java-version }} # The OpenJDK version to make available on the path
-          architecture: 'x64' # defaults to 'x64'
+          java-version: ${{ matrix.java-version }}
+          architecture: 'x64'
 
       - name: Build and Test
         run:   |
@@ -43,32 +32,63 @@ jobs:
               exit 1
          fi
         shell: bash
-  calculate-version:
-    name: Calculate Version
-    runs-on: ubuntu-latest
-    outputs:
-      semVer: ${{ steps.gitversion.outputs.semVer }}
-    steps:
-      # gitversion/execute step omitted for brevity
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-            versionSpec: '5.5.0'
-      - name: Determine Version
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.7
 
-  display-semver:
-    name: Display Semantic Version
+name: Code Coverage
+
+on:
+   merge:
+      branches: [main, dev]
+      
+jobs:
+  code_coverage:
     runs-on: ubuntu-latest
-    needs: build_and_test
-    env:
-      SEMVER: ${{ needs.calculate-version.outputs.semVer }}
     steps:
-      - name: Display version
-        run: |
-          echo SemVer: $SEMVER
+      - uses: actions/checkout@v2
+      - uses: joschi/setup-jdk@v2
+        with:
+          java-version: 11
+          architecture: 'x64'
+
+      - name: Code Coverage
+        run:|
+            chmod +x gradlew
+            ./gradlew jacocoTestReport
+        shell: bash
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+        github-token: ${{ github.token }}
+        
+
+        
+        
+        
+        
+#  calculate-version:
+#    name: Calculate Version
+#    runs-on: ubuntu-latest
+#    outputs:
+#      semVer: ${{ steps.gitversion.outputs.semVer }}
+#    steps:
+#      # gitversion/execute step omitted for brevity
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Install GitVersion
+#        uses: gittools/actions/gitversion/setup@v0.9.7
+#        with:
+#            versionSpec: '5.5.0'
+#      - name: Determine Version
+#        id: gitversion
+#        uses: gittools/actions/gitversion/execute@v0.9.7
+
+#  display-semver:
+#    name: Display Semantic Version
+#    runs-on: ubuntu-latest
+#    needs: build_and_test
+#    env:
+#      SEMVER: ${{ needs.calculate-version.outputs.semVer }}
+#    steps:
+#      - name: Display version
+#        run: |
+#          echo SemVer: $SEMVER
 
       
