--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ plugins {
     id 'maven'
     id 'jacoco'
     id 'maven-publish'
-    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id 'com.github.kt3k.coveralls' version '2.8.1' 
+    id 'io.github.gradle-nexus.publish-plugin' version '1.0.0'
 }
 
 description = 'Sample project for GitHub Actions'
@@ -46,4 +47,15 @@ dependencies {
 if (project.hasProperty('release')) {
     println 'Using release profile for building ' + project.getName()
     apply from: 'gradle/profile-release.gradle'
+}
+
+jacoco {
+    toolVersion = "0.8.5"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
 }
