--- a/.github/workflows/coveralls-coverage.yml
+++ b/.github/workflows/coveralls-coverage.yml
@@ -18,8 +18,6 @@ jobs:
         run: |
              chmod +x gradlew
              ./gradlew build jacocoTestReport
+             ./gradlew coveralls
         shell: bash
-        
-      - uses: coverallsapp/github-action@v1.1.2
-        with:
-           github-token: ${{ github.token }}
+         
