--- a/.github/workflows/coveralls-coverage.yml
+++ b/.github/workflows/coveralls-coverage.yml
@@ -3,7 +3,10 @@ name: Code Coverage
 on:
    push:
       branches: [main, dev]
-      
+env:
+  # TODO: Change variable to your image's name.
+  COVERALLS_REPO_TOKEN: ${{ github.token }}
+         
 jobs:
   code_coverage:
     runs-on: ubuntu-latest
