--- a/.github/workflows/coveralls-coverage.yml
+++ b/.github/workflows/coveralls-coverage.yml
@@ -5,7 +5,7 @@ on:
       branches: [main, dev]
 env:
   # TODO: Change variable to your image's name.
-  COVERALLS_REPO_TOKEN: ${{ github.token }}
+  COVERALLS_REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
          
 jobs:
   code_coverage:
