--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -11,7 +11,7 @@ jobs:
   code_coverage:
     runs-on: ubuntu-latest
     steps:
-         - uses: mikepenz/release-changelog-builder-action@{latest-release}
+         - uses: mikepenz/release-changelog-builder-action@v2.4.1
 
          - name: "Build Changelog"
            run: |
