--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -11,6 +11,7 @@ jobs:
   code_coverage:
     runs-on: ubuntu-latest
     steps:
+         - uses: actions/checkout@v2
          - uses: mikepenz/release-changelog-builder-action@v2.4.1
 
          - name: "Build Changelog"
