--- a/.github/workflows/issue_branch.yml
+++ b/.github/workflows/issue_branch.yml
@@ -16,3 +16,4 @@ jobs:
         uses: robvanderleek/create-issue-branch@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          autoCloseIssue: true
