--- a/.github/workflows/create_changelog.yml
+++ b/.github/workflows/create_changelog.yml
@@ -1,19 +1,21 @@
-name: Changelog
-
+name: 'Release with Changlog'
 on:
-   push:
-      branches: [main, dev]
+  push:
+    tags:
+      - '*'
 
-env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
 jobs:
-  code_coverage:
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
-         - uses: actions/checkout@v2
-         - uses: mikepenz/release-changelog-builder-action@v2.4.1
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-         - name: "Build Changelog"
-           run: |
-                echo Changelog: ${{steps.build_changelog.outputs.changelog}}
+      - name: Create Release
+        uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
+        with:
+          body: ${{steps.github_release.outputs.changelog}}
