Prepare next release

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ plugins {
     id 'maven-publish'
     id 'com.github.kt3k.coveralls' version '2.8.1' 
     id 'io.github.gradle-nexus.publish-plugin' version '1.0.0'
+	id "net.researchgate.release" version "3.0.0"
 }
 
 description = 'Sample project for GitHub Actions'
