--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
  
-version=0.2.7
+version=0.2.8-SNAPSHOT
 
